--- a/blog_edit.html
+++ b/blog_edit.html
@@ -1,33 +1,74 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog Edit</title>
+    <link rel="stylesheet" href="/css/base.css">
+    <link rel="stylesheet" href="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/5.2.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/blog_edit.css">
 </head>
 
 <body>
-    <div class="editor">
-        <h1>Blog Edit</h1>
-        <form enctype="multipart/form-data" method="post" action="submit_blog.php">
-            <input type="text" class="title" name="title" placeholder="タイトル">
-            <textarea class="content" name="content" placeholder="今日の喜びをみんなに分かち合おう！"></textarea>
-            <div class="upload-btn-wrapper">
-                <button class="btn-upload">画像を選択</button>
-                <input type="file" name="image" accept="image/*" class="image-upload" id="imageUpload">
+    <div class="wrap">
+        <!-- ナビ -->
+        <div class="aside">
+            <h2>My Blog !</h2>
+            <ul class="nav">
+                <li>
+                    <a href="/blog_delete.html">
+                        <span>ブログ管理</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="/blog_edit.html" class="active">
+                        <span>ブログ投稿</span>
+                    </a>
+                </li>
+            </ul>
+        </div>
+        <!-- 編集画面 -->
+        <div class="main">
+            <!-- 名前とキャンセルボタン -->
+            <div class="top-nav">
+                <div class="nav-item">
+                    <span class="nick-name">ユーザー名</span>
+                    <span class="quit">キャンセル</span>
+                </div>
             </div>
-            <div class="image-preview">
-                <img src="#" alt="" id="imagePreview">
+            <!-- Edit画面 -->
+            <div class="content">
+                <!-- Blog投稿 -->
+                <div class="card">
+                    <div class="title1">
+                        <h1>Blog投稿</h1>
+                    </div>
+                    <div class="body">
+                        <form method="post">
+                            <input type="text" class="title" name="title" placeholder="タイトル">
+                            <div>
+                                <label>カテゴリー:</label>
+                                <select class="category" id="category" name="category">
+                                    <option value="" selected>選択</option>
+                                    <option value="1">ゲーム</option>
+                                    <option value="2">ライフ</option>
+                                    <option value="3">グルメ</option>
+                                </select>
+                            </div>
+                            <div class="image-preview">
+                                <label for="img">サムネ：</label>
+                                <label for="img" class="place" id="placeLabel">+</label>
+                                <img src="#" alt="上传的图片" id="imagePreview" class="img">
+                            </div>
+                            <input type="file" class="image-upload">
+                            <textarea class="content" name="content" placeholder="今日の喜びを分かち合おう！"></textarea>
+                            <button type="submit" class="submit">投稿</button>
+                        </form>
+                    </div>
+                </div>
             </div>
-            <select name="category" class="category">
-                <option value="ゲーム">ゲーム</option>
-                <option value="ライフ">ライフ</option>
-                <option value="旅行">旅行</option>
-            </select>
-            <button type="submit" class="submit">投稿</button>
-        </form>
+        </div>
     </div>
     <script src="/js/blog_edit.js"></script>
 </body>
