--- a/login.html
+++ b/login.html
@@ -10,23 +10,31 @@
 </head>
 
 <body>
+    <!--  ログイン成功かどうかを提示  -->
+    <div class="alert info-box show alert-success">
+        操作結果
+    </div>
+    <!--　ログイン画面　-->
     <div class="login-container">
         <h1>Welcome to MyBlog!</h1>
-        <form action="login.php" method="POST">
+        <form method="POST" class="login-form">
             <div class="form-group">
                 <label for="username">ユーザー名：</label>
-                <input type="text" id="username" name="username" required>
+                <input type="text" id="username" name="username" required placeholder="ユーザー名">
             </div>
             <div class="form-group">
                 <label for="password">パスワード：</label>
-                <input type="password" id="password" name="password" required>
+                <input type="password" id="password" name="password" required　>
             </div>
-            <button type="submit">ログイン</button>
+            <button type="submit" class="btn">ログイン</button>
         </form>
         <div class="register-link">
             <p><a href="register.html">新規アカウント登録</a></p>
         </div>
     </div>
+    <script src="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/5.2.3/js/bootstrap.min.js"></script>
+    <script src="lib/form-serialize.js"></script>
+    <script src="/js/alert.js"></script>
 </body>
 
 </html>
